--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "papercolor-vscode",
     "displayName": "papercolor-vscode",
     "description": "the popular color theme from VIM to VsCode",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "publisher": "rozbo",
     "engines": {
         "vscode": "^1.5.0"
@@ -14,7 +14,7 @@
         "themes": [
             {
                 "label": "papercolor-vscode",
-                "uiTheme": "vs-light",
+                "uiTheme": "vs",
                 "path": "./themes/papercolor-vscode-light.tmTheme"
             }
         ]
