--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "papercolor-vscode",
     "displayName": "papercolor-vscode",
     "description": "the popular color theme from VIM to VsCode",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "publisher": "rozbo",
     "engines": {
         "vscode": "^1.5.0"
@@ -10,6 +10,11 @@
     "categories": [
         "Themes"
     ],
+    "icon": "icon.png",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/rozbo/papercolor-vscode.git"
+    },
     "contributes": {
         "themes": [
             {
