--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "papercolor-vscode",
     "displayName": "papercolor-vscode",
     "description": "the popular color theme from VIM to VsCode",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "publisher": "rozbo",
     "engines": {
         "vscode": "^1.5.0"
@@ -18,9 +18,9 @@
     "contributes": {
         "themes": [
             {
-                "label": "papercolor-vscode",
+                "label": "papercolor-vscode-light",
                 "uiTheme": "vs",
-                "path": "./themes/papercolor-vscode-light.tmTheme"
+                "path": "./themes/papercolor-light-color-theme.json"
             },
             {
                 "label": "papercolor-vscode-dark",
